--- a/2018/2018-05/2018-05-17_2/source/320x50_v2.css
+++ b/2018/2018-05/2018-05-17_2/source/320x50_v2.css
@@ -497,7 +497,7 @@
   }
   50% { 
     visibility: visible;
-    -webkit-transform: scale(1.2, 1.2);
+    -webkit-transform: scale(1.25, 1.25);
   }
   100% { 
     visibility: visible;
@@ -511,7 +511,7 @@
   }
   50%   {
     visibility: visible;
-    -moz-transform: scale(1.2, 1.2);
+    -moz-transform: scale(1.25, 1.25);
   }
   100% { 
     visibility: visible;
@@ -525,7 +525,7 @@
   }
   50%   {
     visibility: visible;
-    transform: scale(1.2, 1.2);
+    transform: scale(1.25, 1.25);
   }
   100% { 
     visibility: visible;
@@ -632,26 +632,26 @@
 /*-- translate down default --*/
 @-webkit-keyframes translateDownDefault {
   0%   {
-    -webkit-transform: translate(0,28px);
+    -webkit-transform: translate(0,19px);
   }
   100% { 
-    -webkit-transform: translate(0,28px);
+    -webkit-transform: translate(0,19px);
   }
 }
 @-moz-keyframes translateDownDefault {
   0%   {    
-    -moz-transform: translate(0,28px);
+    -moz-transform: translate(0,19px);
   }
   100% {
-    -moz-transform: translate(0,28px);
+    -moz-transform: translate(0,19px);
   }
 }
 @keyframes translateDownDefault {
   0%   {    
-    transform: translate(0,28px);
+    transform: translate(0,19px);
   }
   100% {
-    transform: translate(0,28px);
+    transform: translate(0,19px);
   }
 }
 
@@ -661,7 +661,7 @@
     -webkit-transform: translate(0,0);
   }
   100% { 
-    -webkit-transform: translate(0,-28px);
+    -webkit-transform: translate(0,-19px);
   }
 }
 @-moz-keyframes slideUpText {
@@ -669,7 +669,7 @@
     -moz-transform: translate(0,0);
   }
   100% {
-    -moz-transform: translate(0,-28px);
+    -moz-transform: translate(0,-19px);
   }
 }
 @keyframes slideUpText {
@@ -677,7 +677,7 @@
     transform: translate(0,0);
   }
   100% {
-    transform: translate(0,-28px);
+    transform: translate(0,-19px);
   }
 }
 
@@ -816,8 +816,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 160px;
-  height: 600px;
+  width: 320px;
+  height: 50px;
   display: block;
 }
 
@@ -858,11 +858,12 @@
 }
 
 .cta {
-  background: url('./images/160x600_cta.png') no-repeat center center;
-  width: 160px;
-  height: 66px;
-  bottom: 0px;
-  right: 0px;
+  background: url('./images_v2/320x50_cta.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 97px;
+  height: 19px;
+  bottom: 15px;
+  right: 10px;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -875,19 +876,16 @@
   animation: translateDownDefault 10ms ease-in-out 0s forwards; 
 }
 .frame1-text1 {
-  background: url('./images/160x600_frame1_text1.png') no-repeat center center;
+  background: url('./images_v2/320x50_frame1_text1.png') no-repeat center center;
+  background-size: 100% auto;
 
   -webkit-animation: slideInUp 0.75s ease-in-out 1s forwards;
   -moz-animation: slideInUp 0.75s ease-in-out 1s forwards;
   animation: slideInUp 0.75s ease-in-out 1s forwards;
 }
-.frame1-text1-container {
-  -webkit-animation: slideUpText 0.25s ease-in-out 2.5s forwards;
-  -moz-animation: slideUpText 0.25s ease-in-out 2.5s forwards;
-  animation: slideUpText 0.25s ease-in-out 2.5s forwards;
-}
 .frame1-text2 {
-  background: url('./images/160x600_frame1_text2.png') no-repeat center center;
+  background: url('./images_v2/320x50_frame1_text2.png') no-repeat center center;
+  background-size: 100% auto;
 
   -webkit-animation: slideInUp 0.75s ease-in-out 2s forwards;
   -moz-animation: slideInUp 0.75s ease-in-out 2s forwards;
@@ -899,11 +897,12 @@
   animation: slideUpText 0.25s ease-in-out 3.5s forwards;
 }
 .frame1-text3 {
-  background: url('./images/160x600_frame1_text3.png') no-repeat center center;
+  background: url('./images_v2/320x50_frame1_text3.png') no-repeat center center;
+  background-size: 100% auto;
 
-  -webkit-animation: slideInUp 0.75s ease-in-out 3s forwards;
-  -moz-animation: slideInUp 0.75s ease-in-out 3s forwards;
-  animation: slideInUp 0.75s ease-in-out 3s forwards;
+  -webkit-animation: slideInUp 0.75s ease-in-out 3.05s forwards;
+  -moz-animation: slideInUp 0.75s ease-in-out 3.05s forwards;
+  animation: slideInUp 0.75s ease-in-out 3.05s forwards;
 }
 .frame1 {
   -webkit-animation: slideOutUp 0.75s ease-in-out 4.75s forwards;
@@ -912,77 +911,68 @@
 }
 
 .frame2-text {
-  background: url('./images/160x600_frame2_text.png') no-repeat center center;
+  background: url('./images_v2/320x50_frame2_text.png') no-repeat center center;
+  background-size: 100% auto;
 
-  -webkit-animation: slideInUp 0.75s ease-in-out 4.5s forwards;
-  -moz-animation: slideInUp 0.75s ease-in-out 4.5s forwards;
-  animation: slideInUp 0.75s ease-in-out 4.5s forwards;
+  -webkit-animation: slideInUp 0.75s ease-in-out 4.75s forwards;
+  -moz-animation: slideInUp 0.75s ease-in-out 4.75s forwards;
+  animation: slideInUp 0.75s ease-in-out 4.75s forwards;
 }
 .frame2 {
-  -webkit-animation: slideOutUp 0.75s ease-in-out 7.5s forwards;
-  -moz-animation: slideOutUp 0.75s ease-in-out 7.5s forwards;
-  animation: slideOutUp 0.75s ease-in-out 7.5s forwards;
+  -webkit-animation: slideOutUp 0.75s ease-in-out 7.75s forwards;
+  -moz-animation: slideOutUp 0.75s ease-in-out 7.75s forwards;
+  animation: slideOutUp 0.75s ease-in-out 7.75s forwards;
 }
 .frame3-feature {
-  -webkit-animation: slideInUp 0.75s ease-in-out 7.5s forwards;
-  -moz-animation: slideInUp 0.75s ease-in-out 7.5s forwards;
-  animation: slideInUp 0.75s ease-in-out 7.5s forwards;
+  -webkit-animation: slideInUp 0.75s ease-in-out 7.75s forwards;
+  -moz-animation: slideInUp 0.75s ease-in-out 7.75s forwards;
+  animation: slideInUp 0.75s ease-in-out 7.75s forwards;
 }
 .frame3-feature1 {
-  background: url('./images/160x600_frame3_feature1.png') no-repeat center center;
+  background: url('./images_v2/320x50_frame3_feature1.png') no-repeat center center;
   background-size: 100% auto;
-  width: 78px;
-  height: 101px;
-  top: 18px;
-  left: 41px;
+  width: 28px;
+  height: 36px;
+  top: 7px;
+  left: 10px;
 
-  -webkit-animation: zoomInOut 0.75s ease-in-out 8.25s forwards;
-  -moz-animation: zoomInOut 0.75s ease-in-out 8.25s forwards;
-  animation: zoomInOut 0.75s ease-in-out 8.25s forwards;
+  -webkit-animation: zoomInOut 0.75s ease-in-out 8.5s forwards;
+  -moz-animation: zoomInOut 0.75s ease-in-out 8.5s forwards;
+  animation: zoomInOut 0.75s ease-in-out 8.5s forwards;
 }
 .frame3-feature2 {
-  background: url('./images/160x600_frame3_feature2.png') no-repeat center center;
+  background: url('./images_v2/320x50_frame3_feature2.png') no-repeat center center;
   background-size: 100% auto;
-  width: 78px;
-  height: 102px;
-  top: 140px;
-  left: 41px;
+  width: 28px;
+  height: 36px;
+  top: 7px;
+  left: 44px;
 
-  -webkit-animation: zoomInOut 0.75s ease-in-out 9s forwards;
-  -moz-animation: zoomInOut 0.75s ease-in-out 9s forwards;
-  animation: zoomInOut 0.75s ease-in-out 9s forwards;
+  -webkit-animation: zoomInOut 0.75s ease-in-out 9.25s forwards;
+  -moz-animation: zoomInOut 0.75s ease-in-out 9.25s forwards;
+  animation: zoomInOut 0.75s ease-in-out 9.25s forwards;
 }
 .frame3-feature3 {
-  background: url('./images/160x600_frame3_feature3.png') no-repeat center center;
+  background: url('./images_v2/320x50_frame3_feature3.png') no-repeat center center;
   background-size: 100% auto;
-  width: 108px;
-  height: 101px;
-  top: 262px;
-  left: 28px;
+  width: 35px;
+  height: 36px;
+  top: 7px;
+  left: 79px;
 
-  -webkit-animation: zoomInOut 0.75s ease-in-out 9.75s forwards;
-  -moz-animation: zoomInOut 0.75s ease-in-out 9.75s forwards;
-  animation: zoomInOut 0.75s ease-in-out 9.75s forwards;
-}
-.frame3-text {
-  background: url('./images/160x600_frame3_text.png') no-repeat center center;
-  width: 108px;
-  height: 30px;
-  top: 444px;
-  left: 11px;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 10.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 10.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 10.75s forwards;
+  -webkit-animation: zoomInOut 0.75s ease-in-out 10s forwards;
+  -moz-animation: zoomInOut 0.75s ease-in-out 10s forwards;
+  animation: zoomInOut 0.75s ease-in-out 10s forwards;
 }
 .frame3-logo {
-  background: url('./images/160x600_frame3_logo.png') no-repeat center center;
-  width: 141px;
-  height: 23px;
-  top: 495px;
-  left: 11px;
+  background: url('./images_v2/320x50_frame3_logo.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 74px;
+  height: 16px;
+  top: 17px;
+  left: 126px;
 
-  -webkit-animation: fadeIn 0.75s ease-in-out 10.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 10.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 10.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 11s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 11s forwards;
+  animation: fadeIn 0.75s ease-in-out 11s forwards;
 }
