--- a/2018/2018-05/2018-05-17_2/source/160x600_v2.css
+++ b/2018/2018-05/2018-05-17_2/source/160x600_v2.css
@@ -966,6 +966,7 @@
 }
 .frame3-text {
   background: url('./images_v2/160x600_frame3_text.png') no-repeat center center;
+  background-size: 100% auto;
   width: 108px;
   height: 30px;
   top: 444px;
@@ -977,6 +978,7 @@
 }
 .frame3-logo {
   background: url('./images_v2/160x600_frame3_logo.png') no-repeat center center;
+  background-size: 100% auto;
   width: 141px;
   height: 23px;
   top: 495px;
